# moltis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml  sandbox-packages.yml
crates/agents/: Cargo.toml
crates/agents/src/: auth_profiles.rs  lib.rs  model.rs  prompt.rs  runner.rs  skills.rs  tool_registry.rs
crates/auto-reply/: Cargo.toml
crates/auto-reply/src/: chunk.rs  directives.rs  lib.rs  queue.rs  reply.rs
crates/browser/: Cargo.toml
crates/browser/src/: container.rs  lib.rs  manager.rs  pool.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: lib.rs  server.rs
crates/channels/: Cargo.toml
crates/channels/src/: gating.rs  lib.rs  plugin.rs  registry.rs
crates/cli/: Cargo.toml
crates/cli/src/: db_commands.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: env_subst.rs  lib.rs  loader.rs  migrate.rs  schema.rs  template.rs  validate.rs
crates/cron/: Cargo.toml
crates/cron/src/: lib.rs  service.rs  store.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  auth_middleware.rs  auth_routes.rs  broadcast.rs  channel_events.rs  chat.rs  lib.rs  methods.rs  nodes.rs  provider_setup.rs  server.rs  services.rs  state.rs  tls.rs  ws.rs
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs
crates/gateway/ui/: input.css
crates/media/: Cargo.toml
crates/media/src/: cleanup.rs  image_ops.rs  lib.rs  mime.rs  server.rs  store.rs
crates/memory/: Cargo.toml
crates/memory/src/: embeddings.rs  lib.rs  search.rs  store.rs
crates/oauth/src/: storage.rs
crates/onboarding/: Cargo.toml
crates/onboarding/src/: lib.rs  service.rs  wizard.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: api.rs  hooks.rs  lib.rs  loader.rs  provider.rs  shell_hook.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/routing/: Cargo.toml
crates/routing/src/: lib.rs  resolve.rs
crates/sessions/: Cargo.toml
crates/sessions/src/: compaction.rs  key.rs  lib.rs  metadata.rs  store.rs
crates/skills/src/: install.rs
crates/telegram/src/: handlers.rs  markdown.rs
crates/tools/: Cargo.toml
crates/tools/src/: approval.rs  exec.rs  lib.rs  map.rs  policy.rs  (+2 more)
docs/src/: security.md
scripts/: local-validate-pr.sh  local-validate.sh
(+23 files in other folders)
