[package]
name = "moltis-auto-reply"
version.workspace = true
edition.workspace = true

[dependencies]
moltis-common = { workspace = true }
moltis-routing = { workspace = true }
moltis-sessions = { workspace = true }
moltis-agents = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
