[package]
name = "moltis-channels"
version.workspace = true
edition.workspace = true

[dependencies]
moltis-common = { workspace = true }
moltis-config = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
