[package]
name = "moltis-cron"
version.workspace = true
edition.workspace = true

[dependencies]
moltis-common = { workspace = true }
moltis-agents = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
