[package]
name = "moltis-memory"
version.workspace = true
edition.workspace = true

[dependencies]
moltis-common = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
