[package]
name = "moltis-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
moltis-common = { workspace = true }
moltis-agents = { workspace = true }
moltis-channels = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
